# server/src/db/mod.rs
@@ -1,3 +1,4 @@
 pub mod batches;
+pub mod containers;
 pub mod plants;
 pub mod users;
